perf: updated some termins

--- a/01. prologue.md
+++ b/01. prologue.md
@@ -1,9 +1,9 @@
 # Пролог
 
-Учитывая, сколько дураков умеют считать, удивительно, что кому-то может показаться, что овладеть теми же приемами — это сложное или утомительное занятие для другого дурака.
+Учитывая, сколько дураков умеют исчислять, удивительно, что кому-то может показаться, что овладеть теми же приемами — это сложное или утомительное занятие для другого дурака.
 
-Некоторые приемы исчисления довольно просты. Некоторые — чертовски сложны. Дураки, которые пишут учебники по высшей математике — а они в основном умные дураки — редко утруждают себя тем, чтобы показать, как просты простые вычисления. Напротив, они, похоже, хотят впечатлить вас своей поразительной смекалкой, прибегая к самым сложным методам.
+Некоторые приемы исчисления довольно просты. Некоторые — чертовски сложны. Дураки, которые пишут учебники по высшей математике — а они в основном умные дураки — редко утруждают себя тем, чтобы показать, насколько элементарны простые исчисления. Напротив, они, похоже, хотят впечатлить вас своей поразительной смекалкой, прибегая к самым сложным методам.
 
-Будучи сам по себе довольно тупым, мне пришлось отучить себя от сложностей, и теперь я хочу представить своим собратьям-дуракам те части, которые не представляют труда. Освойте их тщательно, и остальное придёт само собой. 
+Будучи сам по себе довольно глупым, мне пришлось отучить себя от сложностей, и теперь я хочу представить своим собратьям-дуракам те подходы к исчислению, которые не представляют труда. Освойте их тщательно, и остальное придёт само собой. 
 
 *То, что умеет делать один дурак, сможет сделать и другой*
