perf: updated 3 chapters with the markdown lint

--- a/03.md
+++ b/03.md
@@ -4,7 +4,7 @@
 с малыми величинами различной степени малости.
 
 Нам также предстоит понять, при каких условиях можно считать
-малые величины настолько ничтожными, 
+малые величины настолько ничтожными,
 что их можно опустить из рассмотрения.
 Всё зависит от их относительной незначительности.
 
@@ -32,11 +32,11 @@
 
 А теперь подумайте о фартинге по сравнению с совеpеном:
 его ценность едва превышает долю в $\frac{1}{1000}$.
-Фартинг, больше или меньше, имеет крайне незначимое значение 
+Фартинг, больше или меньше, имеет крайне незначимое значение
 по сравнению с совеpеном, и его вполне можно
 считать малой величиной. Но если сравнить фартинг с суммой
 в $1000$ фунтов, то относительно этой большей суммы
-фардинг окажется настолько незначительным, 
+фардинг окажется настолько незначительным,
 как если бы $\frac{1}{1000}$ фартинга имели значение соверена.
 Даже золотой совеpен оказывается
 относительной незначительной величиной в богатстве миллионера.
@@ -108,37 +108,56 @@ $a \times x \times dx$, можно считать незначительными
 будет равен $\frac{2}{1,000}$ от $x^2$,
 а третий – всего $\frac{1}{1,000,000}$ от $x^2$.
 
-Геометрически это можно изобразить следующим образом. Нарисуйте квадрат (Рисунок 1), сторону которого будем считать равной $x$. 
+Геометрически это можно изобразить следующим образом.
+Нарисуйте квадрат (Рисунок 1), сторону которого будем считать равной $x$.
 
+![alt text](img/03/image_1.png)
 
-![alt text](img/03/image.png)
-
-Теперь представьте, что квадрат увеличивается за счёт добавления по обеим сторонам небольшого приращения $dx$. Увеличенный квадрат состоит из исходного квадрата площадью $x^2$, двух прямоугольников – одного сверху и одного справа, каждый из которых имеет площадь $x \times dx$ (а вместе – $2 x \times dx$), и маленького квадрата в верхнем правом углу, площадь которого равна $(dx)^2$.
+Теперь представьте, что квадрат увеличивается за счёт добавления по обеим сторонам
+небольшого приращения $dx$. Увеличенный квадрат состоит из исходного квадрата
+площадью $x^2$, двух прямоугольников – одного сверху и одного справа,
+каждый из которых имеет площадь $x \times dx$ (а вместе – $2 x \times dx$),
+и маленького квадрата в верхнем правом углу, площадь которого равна $(dx)^2$.
 
 На Рисунке $2$ мы взяли $dx$ как достаточно большую долю от $x$ – примерно $\frac{1}{5}$.
 
-![alt text](img/03/image-1.png)
+![alt text](img/03/image_2.png)
 
-Но представьте, что мы выбрали его равным лишь $\frac{1}{100}$ – примерно толщине чернильной линии, проведённой тонким пером. Тогда маленький квадрат в углу будет иметь площадь всего $\frac{1}{10,000}$ от $x^2$ и практически окажется незаметным. Очевидно, $(dx)^2$ можно считать незначительным, если само приращение dx достаточно мало.
+Но представьте, что мы выбрали его равным лишь $\frac{1}{100}$ – примерно толщине
+чернильной линии, проведённой тонким пером. Тогда маленький квадрат в углу будет
+иметь площадь всего $\frac{1}{10,000}$ от $x^2$ и практически окажется незаметным.
+Очевидно, $(dx)^2$ можно считать незначительным,
+если само приращение dx достаточно мало.
 
-![alt text](img/03/image-2.png)
+![alt text](img/03/image_3.png)
 
 Рассмотрим один аналогичный случай.
 
-Представьте, что миллионер говорит своей секретарше: «На следующей неделе я отдам тебе небольшую долю от всех поступлений». А секретарша, в свою очередь, говорит своему мальчику: «Я отдам тебе небольшую долю от того, что получу». Пусть в обоих случаях эта доля составляет $\frac{1}{100}$. Тогда, если за следующую неделю мистер Миллионер получит £$1000$, секретарша заработает £$10$, а мальчик – $2$ шиллинга. Десять фунтов — это относительно маленькая сумма по сравнению с £$1000$, однако два шиллинга представляют собой действительно крошечную величину, принадлежащую к совсем другому порядку. А какова будет разница, если доля, вместо $\frac{1}{100}$, окажется равной $\frac{1}{1,000}$? Тогда, пока мистер Миллионер получит свои £$1000$, секретарша получит всего £1, а мальчик — менее одного фартинга!
+Представьте, что миллионер говорит своей секретарше: «На следующей неделе
+я отдам тебе небольшую долю от всех поступлений». А секретарша, в свою очередь,
+говорит своему мальчику: «Я отдам тебе небольшую долю от того, что получу».
+Пусть в обоих случаях эта доля составляет $\frac{1}{100}$.
+Тогда, если за следующую неделю мистер Миллионер получит £$1000$, секретарша
+заработает £$10$, а мальчик – $2$ шиллинга. Десять фунтов — это относительно
+маленькая сумма по сравнению с £$1000$, однако два шиллинга представляют собой
+действительно крошечную величину, принадлежащую к совсем другому порядку.
+А какова будет разница, если доля, вместо $\frac{1}{100}$,
+окажется равной $\frac{1}{1,000}$? Тогда, пока мистер Миллионер
+получит свои £$1000$, секретарша получит всего £1, а мальчик — менее одного фартинга!
 
 Остроумный Джонатан Сфивт писал:
 
-> Натуралистами открыты <br> У паразитов паразиты, <br> И произвёл переполох <br> Тот факт, что блохи есть у блох. <br><br> И обнаружил микроскоп, <br> Что на клопе бывает клоп, <br> Питающийся паразитом, <br> На нём другой — ad infinitum. 
+> Натуралистами открыты <br>
+> У паразитов паразиты, <br>
+> И произвёл переполох <br>
+> Тот факт, что блохи есть у блох.
+> <br><br>
+> И обнаружил микроскоп, <br>
+> Что на клопе бывает клоп, <br>
+> Питающийся паразитом, <br>
+> На нём другой — ad infinitum.
 
-Бык может волноваться из-за обычной по размеру блохи — маленького существа первого порядка малости. Однако он вряд ли утруждал бы себя заботой о «блошке блошки»; находящейся во втором порядке малости, она была бы незначительна. Даже ,масса «блошек блошек» не имел бы значения для быка.
-
-
-
-
-
-
-
-
-
-
+Бык может волноваться из-за обычной по размеру блохи — маленького существа
+первого порядка малости. Однако он вряд ли утруждал бы себя
+заботой о «блошке блошки»; находящейся во втором порядке малости,
+она была бы незначительна. Даже масса «блошек блошек» не имел бы значения для быка.
